# tricys

./: .dockerignore  .gitignore  .gitmodules  404.html  Makefile  Makefile.bat  README.md  README_zh.md  changelog.html  docker-compose.hdf5.yml  docker-compose.yml  goview_iframe_integration.md  goview_integration_master_plan.html  index.html  install_all_deps.bat  license.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  start_all.bat
.devcontainer/: devcontainer.json
.github/plans/: p0-dwsim-equivalence-verification.md  p2-constrained-buffer-component.md  p3-blanket-default-constraints.md
.github/workflows/: build_test.yml  deploy_docs.yml  docker_publish.yml
20260409_203233/: execution_report_20260409_203233.md
20260409_203233/CFEDR_Morris_smoke/: config.json
api/: tricys_analysis.html  tricys_core.html  tricys_handlers.html  tricys_postprocess.html  tricys_simulation.html  tricys_utils.html
api/tricys_analysis/: index.html
api/tricys_core/: index.html
api/tricys_handlers/: index.html
api/tricys_postprocess/: index.html
api/tricys_simulation/: index.html
api/tricys_utils/: index.html
changelog/: index.html
docker/: tricys_om_gui_buildtest.dockerfile  tricys_om_ompython_buildtest.dockerfile
docker/dockerfiles/: Dockerfile  Dockerfile.hdf5
docker/nginx/: nginx_goview.conf  nginx_visual.conf
docs/: goview_integration_master_plan.md
docs/en/: index.md  (+2 more)
en/: changelog.html  index.html  license.html
explanation/: architecture.html  index.html
guides/: index.html  quickstart.html
installation/: index.html
license/: index.html
questions/: advanced_features.html  best_practices.html  configuration.html  index.html  installation.html  troubleshooting.html
reference/: index.html
search/: search_index.js  search_index.json
tools/: doc_registry.py
tricys/: __init__.py  main.py
tutorials/: index.html
zh/: changelog.html  goview_iframe_integration.html  goview_integration_master_plan.html  index.html  license.html
(+400 files in other folders)
