[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tricys"
version = "1.0.0"
authors = [
  { name="asipp-neutronics", email="guilong@ie.ah.cn" },
]
description = "TRitium Integrated CYcle Simulation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "pathlib",
    "OMPython == 3.6.0",
    "openai",
    "python-dotenv",
    "SALib",
    "python-json-logger",
    "tabulate",
    "tables",
    "dash",
    "dash-bootstrap-components",
    "pywin32; sys_platform == 'win32'"
]

[project.urls]
"Homepage" = "https://github.com/asipp-neutronics/tricys"
"Bug Tracker" = "https://github.com/asipp-neutronics/tricys"

[project.scripts]
tricys = "tricys.main:main"


[project.optional-dependencies]
dev = [
    "pytest",  
    "ruff",    
    "black",
    "pre-commit"
]

docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-mermaid2-plugin",
    "mkdocs-static-i18n",
    "mkdocstrings",
    "mkdocstrings-python"
]

[tool.setuptools]
packages = ["tricys_backend", "tricys", "tricys.simulation", "tricys.utils", "tricys.core", "tricys.analysis", "tricys.postprocess", "tricys.example", "tricys.example.example_runner", "tricys.visualizer"]

[tool.setuptools.package-data]
tricys = ["example/example_data/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501","E722"]

[tool.ruff.lint.isort]
known-first-party = ["tricys"]

[tool.pytest.ini_options]
markers = [
    "build_test: marks tests for github action",
]
